2012-04-18 Michel Trottier-McDonald <mtm@cern.ch>
	* Renamed muLHSkim to LHSkim
	* Slightly changed run restrictions in trigger requirements to
	capture all MC runs
	* Added no trigger requirement for 2012 runs
	* added *_skimselection as placeholders for the object requirement
	done in skimming

2012-04-17 Michel Trottier-McDonald <mtm@cern.ch>
	* Cleaned up the lephad section of datasets.cfg, adapted to ehad +
	muhad
	* Adapted muLHSkim.py
	* Corrected run error in the mu data trigger filter

2012-04-12 Michel Trottier-McDonald <mtm@cern.ch>
	* Implemented the run_mc_lh.py and run_data_lh.py scripts
	* Added back the EF_* block adn the trig_* block in the skims

2012-04-09 Michel Trottier-McDonald <mtm@cern.ch>
	* Migrating from atlasoff to atlasgrp
	* Splitting Processor Trees into testing and training trees

2012-04-07 Michel Trottier-McDonald <mtm@cern.ch>
	* Patched up the overlap removal order, to correct the muon and tau overlaps

2012-04-02 Michel Trottier-McDonald <mtm@cern.ch>
	* Migration to the ATLAS HSG4 SVN
	* Setting tauBDTJetScore back to medium in preselection
	* Adding MET in the Processor files
	* Fixed the histogram matching bins
	* Now requiring pt>18GeV for matched EFMG object, although that isn't quite enough
	* Putting back the trig_* block in the skim: I need it for muon trigger matching
	* Adding the electron triggers into the MC D3PD skims
	* Removing the tau_OtherTrk_* block from the D3PD skims

2012-03-06 Michel Trottier-McDonald <mtm@cern.ch>
	* Adding muLHProcessor.py : Event quality and object selection
	* Adding higgstautau/lephad/models.py
	* Adding test-lhskim.sh

2012-02-23 Michel Trottier-McDonald <mtm@cern.ch>
	* Adding muLHSkim.py: Skimming, trimming and object preselection for mu-had channel
	* Adding higgstautau/lephad/filters.py: Define muTriggers muMCTriggers
	* Adding this ChangeLog
	* Adding datasets/lephad/*.txt: Specify datasets for mu-had channel